退款,科目编码,特批功能

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -69,6 +69,10 @@
       &:hover {
         background-color: $menuHover !important;
       }
+      /* 隐藏侧边栏下拉箭头 */
+      // .el-submenu__icon-arrow {
+      //   display: none;
+      // }
     }
 
     .is-active>.el-submenu__title {
