--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,7 +18,7 @@ $menuHover:#263445;
 
 $subMenuBg:#1f2d3d;
 $subMenuHover:#001528;
-
+/* 侧边栏宽度(默认210px) */
 $sideBarWidth: 210px;
 
 // the :export directive is the magic sauce for webpack
